tests/samples/positive/core/trailing_separator_policy.ax
module trailing_separator_policy;

struct PairI32Bool {
    left: i32;
    right: bool;
}

enum ChoiceBool: u8 {
    ok = 1,
    err(bool) = 2
}

fn choose(first: i32, second: bool,) -> ChoiceBool {
    let pair = PairI32Bool {
        left: first,
        right: second,
    };
    if pair.left == first {
        return ChoiceBool.ok;
    }
    return ChoiceBool.err(pair.right);
}

fn main() -> i32 {
    let value = choose(41, false,);
    return match value {
        .ok => 0,
        .err(flag) => if flag { 1 } else { 2 }
    };
}
